--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "stof/doctrine-extensions-bundle": "^1.2",
         "willdurand/js-translation-bundle": "^2.5",
         "jms/i18n-routing-bundle": "^2.0",
-        "lstrojny/functional-php": "^1.2"
+        "lstrojny/functional-php": "1.0.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
