--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,7 +46,7 @@ framework:
     fragments:       ~
     http_method_override: true
 
-# Twig Configuration
+# Twig
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
@@ -61,7 +61,7 @@ twig:
     form_themes:
         - 'bootstrap_3_layout.html.twig'
 
-# Assetic Configuration
+# Assetic
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
@@ -73,7 +73,7 @@ assetic:
             formatter: 'Leafo\ScssPhp\Formatter\Compressed'
         jsqueeze: ~
 
-# Doctrine Configuration
+# Doctrine
 doctrine:
     dbal:
         driver:   pdo_mysql
@@ -111,7 +111,7 @@ doctrine:
                         alias: GedmoTranslatable # (optional) it will default to the name set for the mapping
                         is_bundle: false
 
-#
+# JMSI18nRoutingBundle
 jms_i18n_routing:
     default_locale: %default_locale%
     locales: %supported_locales%
@@ -121,7 +121,7 @@ jms_i18n_routing:
         es: "es.%website_url%" 
     redirect_to_host: true
 
-# Swiftmailer Configuration
+# Swiftmailer
 swiftmailer:
     transport: "%mailer_transport%"
     host:      "%mailer_host%"
@@ -137,15 +137,15 @@ fos_user:
         confirmation:
             enabled: true
 
-# FOSJsRoutingBundle Configuration
+# FOSJsRoutingBundle
 fos_js_routing:
     routes_to_expose: [ '.*' ]
 
 
-# NelmioApiDocBundle Configuration
+# NelmioApiDocBundle
 nelmio_api_doc: ~
 
-# FOSOAuthServerBundle Configuration
+# FOSOAuthServerBundle
 fos_oauth_server:
     db_driver: orm       # Driver availables: orm, mongodb, or propel
     client_class:        AppBundle\Entity\Client
@@ -158,3 +158,10 @@ fos_oauth_server:
 services:
     fos_user.doctrine_registry:
         alias: doctrine
+
+# JsTranslationBundle
+bazinga_js_translation:
+    locale_fallback: %default_locale%
+    active_locales:
+        - en
+        - es
