handle multiple Agendas (Alliance)

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -95,7 +95,7 @@ AppBundle\Entity\Card:
         traits:
             type: string
             length: 255
-            nullable: true
+            nullable: false
             gedmo:
                 - translatable
         flavor:
