--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -5,8 +5,11 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.exception, method: onCoreException, priority: 1000 }
             
-    decks:
-        class: AppBundle\Services\Decks
+    deck_import_service:
+        class: AppBundle\Services\DeckImportService
+        arguments: ["@doctrine.orm.entity_manager"]
+    deck_manager:
+        class: AppBundle\Services\DeckManager
         arguments: ["@doctrine.orm.entity_manager", "@deck_validation_helper", "@agenda_helper", "@diff", "@logger"]
     highlight:
         class: AppBundle\Services\Highlight
