--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,8 +40,8 @@ framework:
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+        handler_id: session.handler.native_file
+        save_path: "%kernel.root_dir%/sessions"
         cookie_lifetime: 604800
     fragments:       ~
     http_method_override: true
