--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "willdurand/js-translation-bundle": "^2.6"
     },
     "require-dev": {
+        "guzzlehttp/guzzle": "^6.3",
         "phpunit/phpunit": "^6.5",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0"
