--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -128,6 +128,10 @@ AppBundle\Entity\Card:
             type: boolean
             nullable: false
             column: is_multiple
+        imageUrl:
+            type: string
+            length: 255
+            nullable: true
     uniqueConstraints:
         card_code_idx:
             columns: [ code ]
