--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -13,6 +13,8 @@ monolog:
             type: fingers_crossed
             action_level: error
             handler: nested
+            excluded_404s:
+                - ^/bundle/cards
         nested:
             type: stream
             path: '%kernel.logs_dir%/%kernel.environment%.log'
