--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "jms/i18n-routing-bundle": "^2.0.1",
         "leafo/scssphp": "^0.7.4",
         "nelmio/api-doc-bundle": "^3.0",
+        "nelmio/cors-bundle": "^1.5",
         "patchwork/jsqueeze": "^2.0",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
