--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,8 +2,8 @@ app:
     resource: "@AppBundle/Resources/config/routing.yml"
     prefix:   /
 
-NelmioApiDocBundle:
-    resource: "@NelmioApiDocBundle/Resources/config/routing/swaggerui.xml"
+nelmio_api_doc_bundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /api/doc
 
 _bazinga_jstranslation:
