--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,14 +94,14 @@ doctrine:
                 power: AppBundle\DQL\PowerFunction
 
 # JMSI18nRoutingBundle Configuration
-jms_i18n_routing:
-    default_locale: '%kernel.default_locale%'
-    locales: '%supported_locales%'
-    strategy: custom
-    hosts:
-        en: "%website_url%"
-        es: "es.%website_url%"
-    redirect_to_host: true
+#jms_i18n_routing:
+#    default_locale: '%kernel.default_locale%'
+#    locales: '%supported_locales%'
+#    strategy: custom
+#    hosts:
+#        en: "%website_url%"
+#        es: "es.%website_url%"
+#    redirect_to_host: true
 
 # Swiftmailer Configuration
 swiftmailer:
