disable i18n routing for /api

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,6 +1,8 @@
 app_api:
     resource: "@AppBundle/Resources/config/routing/routing_api.yml"
     prefix: /api
+    options:
+        i18n: false
 
 app_cards:
     resource: "@AppBundle/Resources/config/routing/routing_cards.yml"
