disable registration confirmation email

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -118,7 +118,7 @@ fos_user:
     user_class: AppBundle\Entity\User
     registration:
         confirmation:
-            enabled: true
+            enabled: false
     from_email:
         address: '%email_sender_address%'
         sender_name: '%email_sender_name%'
