--- a/src/AppBundle/Resources/config/routing/routing_deck.yml
+++ b/src/AppBundle/Resources/config/routing/routing_deck.yml
@@ -112,6 +112,14 @@ deck_export_text:
     requirements:
         deck_id: \d+
 
+deck_export_binder:
+    path: /export/binder/{deck_id}
+    methods: [GET]
+    defaults:
+        _controller: AppBundle:Builder:binderexport
+    requirements:
+        deck_id: \d+
+
 deck_export_octgn_list:
     path: /export/octgn/list
     methods: [GET]
