--- a/src/AppBundle/Resources/config/routing/routing_decklist.yml
+++ b/src/AppBundle/Resources/config/routing/routing_decklist.yml
@@ -7,6 +7,14 @@ decklist_export_octgn:
     requirements:
         decklist_id: \d+
 
+#decklist_export_binder:
+#    path: /export/octgn/{decklist_id}
+#    methods: [GET]
+#    defaults:
+#        _controller: AppBundle:Social:octgnexport
+#    requirements:
+#       decklist_id: \d+
+
 decklist_export_text:
     path: /export/text/{decklist_id}
     methods: [GET]
