--- a/src/AppBundle/Resources/config/routing/routing_deck.yml
+++ b/src/AppBundle/Resources/config/routing/routing_deck.yml
@@ -112,11 +112,11 @@ deck_export_text:
     requirements:
         deck_id: \d+
 
-deck_export_binder:
-    path: /export/binder/{deck_id}
+deck_export_text_ordered:
+    path: /export/text_ordered/{deck_id}
     methods: [GET]
     defaults:
-        _controller: AppBundle:Builder:binderexport
+        _controller: AppBundle:Builder:textorderedexport
     requirements:
         deck_id: \d+
 
