--- a/src/AppBundle/Resources/config/routing/routing_deck.yml
+++ b/src/AppBundle/Resources/config/routing/routing_deck.yml
@@ -112,11 +112,21 @@ deck_export_text:
     requirements:
         deck_id: \d+
 
-deck_export_text_ordered:
-    path: /export/text_ordered/{deck_id}
+deck_export_text_ordered_deluxe_before:
+    path: /export/text_ordered_db/{deck_id}
     methods: [GET]
     defaults:
         _controller: AppBundle:Builder:textorderedexport
+        deluxeAfter: false
+    requirements:
+        deck_id: \d+
+
+deck_export_text_ordered_deluxe_after:
+    path: /export/text_ordered_da/{deck_id}
+    methods: [GET]
+    defaults:
+        _controller: AppBundle:Builder:textorderedexport
+        deluxeAfter: true
     requirements:
         deck_id: \d+
 
