--- a/src/AppBundle/Resources/config/routing/routing_decklist.yml
+++ b/src/AppBundle/Resources/config/routing/routing_decklist.yml
@@ -15,6 +15,24 @@ decklist_export_text:
     requirements:
         decklist_id: \d+
 
+decklist_export_text_ordered_deluxe_before:
+    path: /export/text_ordered_db/{decklist_id}
+    methods: [GET]
+    defaults:
+        _controller: AppBundle:Social:textorderedexport
+        deluxeAfter: false
+    requirements:
+        decklist_id: \d+
+
+decklist_export_text_ordered_deluxe_after:
+    path: /export/text_ordered_da/{decklist_id}
+    methods: [GET]
+    defaults:
+        _controller: AppBundle:Social:textorderedexport
+        deluxeAfter: true
+    requirements:
+        decklist_id: \d+
+
 decklist_detail:
     path: /view/{decklist_id}/{decklist_name}
     methods: [GET]
