--- a/src/AppBundle/Resources/config/routing/routing_decklist.yml
+++ b/src/AppBundle/Resources/config/routing/routing_decklist.yml
@@ -1,35 +1,8 @@
-
-decklist_export_octgn:
-    path: /export/octgn/{decklist_id}
-    methods: [GET]
-    defaults:
-        _controller: AppBundle:Social:octgnexport
-    requirements:
-        decklist_id: \d+
-
-decklist_export_text:
+decklist_download:
     path: /export/text/{decklist_id}
     methods: [GET]
     defaults:
-        _controller: AppBundle:Social:textexport
-    requirements:
-        decklist_id: \d+
-
-decklist_export_text_ordered_deluxe_before:
-    path: /export/text_ordered_db/{decklist_id}
-    methods: [GET]
-    defaults:
-        _controller: AppBundle:Social:textorderedexport
-        deluxeAfter: false
-    requirements:
-        decklist_id: \d+
-
-decklist_export_text_ordered_deluxe_after:
-    path: /export/text_ordered_da/{decklist_id}
-    methods: [GET]
-    defaults:
-        _controller: AppBundle:Social:textorderedexport
-        deluxeAfter: true
+        _controller: AppBundle:Social:download
     requirements:
         decklist_id: \d+
 
