--- a/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
+++ b/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
@@ -4,6 +4,12 @@ api_packs:
     defaults:
         _controller: AppBundle:Api:listPacks
 
+api_cycles:
+    path: /cycles/
+    methods: [GET]
+    defaults:
+        _controller: AppBundle:Api:listCycles
+
 api_card:
     path: /card/{card_code}.{_format}
     methods: [GET]
