list json extension as dependency in composer file.

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require": {
         "php": ">=7.1.0",
+        "ext-json": "*",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "erusev/parsedown": "^1.6",
