--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -14,5 +14,6 @@
     <file>features/</file>
     <file>src/</file>
     <file>tests/</file>
-
+    <exclude-pattern>app/AppCache.php</exclude-pattern>
+    <exclude-pattern>app/AppKernel.php</exclude-pattern>
 </ruleset>
