require migrations package.

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": ">=7.1.0",
         "ext-json": "*",
         "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.5",
         "erusev/parsedown": "^1.6",
         "ezyang/htmlpurifier": "^4.9",
