--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -159,3 +159,20 @@ nelmio_cors:
             allow_origin: ['*']
             allow_methods: ['GET']
             max_age: 3600
+
+# Doctrine Migrations
+doctrine_migrations:
+    dir_name: '%kernel.project_dir%/src/Migrations'
+    # namespace is arbitrary but should be different from App\Migrations
+    # as migrations classes should NOT be autoloaded
+    namespace: DoctrineMigrations
+    table_name: 'migration_versions'
+    column_name: 'version'
+    column_length: 14
+    executed_at_column_name: 'executed_at'
+    name: 'Application Migrations'
+    # available in version >= 1.2. Possible values: "BY_YEAR", "BY_YEAR_AND_MONTH", false
+    organize_migrations: false
+    # available in version >= 1.3. Path to your custom migrations template
+    custom_template: ~
+    all_or_nothing: false
