adds active flag to tournament.

--- a/src/AppBundle/Resources/config/doctrine/Tournament.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Tournament.orm.yml
@@ -15,3 +15,8 @@ AppBundle\Entity\Tournament:
         description:
             type: string
             length: 60
+        active:
+            type: boolean
+            nullable: false
+            options:
+                default: true
