--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_script:
 
 script:
   # this checks that the source code follows the Symfony Code Syntax rules
-  - ./vendor/bin/phpcs --exclude=src/migrations src tests app
+  - ./vendor/bin/phpcs --ignore=src/migrations src tests app
   # this checks that the YAML config files contain no syntax errors
   - ./bin/console lint:yaml app/config
   # this checks that the Twig template files contain no syntax errors
