--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,6 +57,7 @@ twig:
         cards_data: "@cards_data"
         deck_validation_helper: "@deck_validation_helper"
         google_analytics_tracking_code: "%google_analytics_tracking_code%"
+        allow_search_engine_tracking: "%allow_search_engine_tracking%"
     form_themes:
         - 'bootstrap_3_layout.html.twig'
 
