--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": ">=7.1.0",
         "ext-fileinfo": "*",
         "ext-json": "*",
+        "ext-pdo": "*",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "doctrine/doctrine-migrations-bundle": "^2.0",
@@ -50,7 +51,7 @@
         "symfony/symfony": "3.4.*",
         "symfony/templating": "^3",
         "twig/twig": "^2.7.0",
-        "willdurand/js-translation-bundle": "^2.6"
+        "willdurand/js-translation-bundle": "^2.6",
     },
     "require-dev": {
         "beberlei/assert": "^2.9",
