--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "nelmio/api-doc-bundle": "^2.0",
         "nelmio/cors-bundle": "^1.5",
         "patchwork/jsqueeze": "^2.0",
+        "ramsey/uuid-doctrine": "^1.5",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
