--- a/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
@@ -85,3 +85,6 @@ AppBundle\Entity\Deck:
             type: integer
             nullable: false
             column: minor_version
+        uuid:
+            type: uuid
+            unique: true
