--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,6 +82,8 @@ doctrine:
         user: '%database_user%'
         password: '%database_password%'
         charset: UTF8
+        types:
+            uuid:  Ramsey\Uuid\Doctrine\UuidType
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
