uuid column needs to be nullable.

--- a/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
@@ -87,4 +87,5 @@ AppBundle\Entity\Deck:
             column: minor_version
         uuid:
             type: uuid
+            nullable: true
             unique: true
