--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     "behat/symfony2-extension": "^2.1",
     "justinrainbow/json-schema": "^5.2",
     "mockery/mockery": "^1.2",
+    "phpstan/phpstan": "^0.12.31",
     "phpunit/phpunit": "^7",
     "squizlabs/php_codesniffer": "@stable",
     "symfony/expression-language": "3.4.*",
