--- a/config/routes/app_user.yaml
+++ b/config/routes/app_user.yaml
@@ -1,10 +1,10 @@
 remind_email:
-    path:     /remind/{username}
+    path: /user/remind/{username}
     defaults:
         _controller: App\Controller\UserController:remindAction
 
 user_profile_public:
-    path: /profile/{user_id}/{user_name}/{page}
+    path: /user/profile/{user_id}/{user_name}/{page}
     methods: [GET]
     defaults:
         _controller: App\Controller\UserController:publicProfileAction
@@ -13,37 +13,13 @@ user_profile_public:
         user_id: \d+
 
 user_profile_edit:
-    path: /profile_edit
+    path: /user/profile_edit
     methods: [GET]
     defaults:
         _controller: App\Controller\UserController:editProfileAction
 
 user_profile_save:
-    path: /profile_save
+    path: /user/profile_save
     methods: [POST]
     defaults:
         _controller: App\Controller\UserController:saveProfileAction
-
-decklist_favorite:
-    path: /favorite
-    methods: [POST]
-    defaults:
-        _controller: App\Controller\SocialController:favoriteAction
-
-decklist_like:
-    path: /like
-    methods: [POST]
-    defaults:
-        _controller: App\Controller\SocialController:voteAction
-
-decklist_comment:
-    path: /comment
-    methods: [POST]
-    defaults:
-        _controller: App\Controller\SocialController:commentAction
-
-decklist_comment_hide:
-    path: /hidecomment/{comment_id}/{hidden}
-    methods: [POST]
-    defaults:
-        _controller: App\Controller\SocialController:hidecommentAction
