rewires cards data service.

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,7 +5,7 @@ twig:
     globals:
         default_locale: "%kernel.default_locale%"
         supported_locales: "%supported_locales%"
-        cards_data: "@cards_data"
+        cards_data: "@App\\Services\\CardsData"
         deck_validation_helper: "@deck_validation_helper"
         google_analytics_tracking_code: "%google_analytics_tracking_code%"
         allow_search_engine_tracking: "%allow_search_engine_tracking%"
